:sparkles: AI 운동 추천 장점 & 주의사항 추가